--- a/cfg/environments.js.tmpl
+++ b/cfg/environments.js.tmpl
@@ -19,6 +19,7 @@ module.exports = {
 				username: 'xxxx',
 				password: 'xxxx',
 				hostname: 'xxxx',
+				port: '3306',
 				prefix: 'xxxx_',
 			},
 			// the FTP of your webhoster on http://www.yourdomain.tld
@@ -48,6 +49,7 @@ module.exports = {
 				username: 'root',
 				password: '',
 				hostname: 'localhost',
+				port: '3306',
 				prefix: 'wp_',
 			},
 			url: 'http://localhost/wp-local-repos/app',
